# quick-vector-search

./: README.md  pyproject.toml
quick_vector_search/: run_vs_ui.py  vector_search.py
quick_vector_search/db/: __init__.py
quick_vector_search/settings/: __init__.py
